# zinnia

./: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: filesystem.rs  lib.rs  migrations.rs  notes.rs  watcher.rs
crates/frontend/: package-lock.json  package.json  vitest.config.ts
crates/frontend/src/: App.tsx  style.css
crates/frontend/src-tauri/: Cargo.toml  tauri.conf.json
crates/frontend/src-tauri/capabilities/: default.json
crates/frontend/src-tauri/src/: lib.rs
crates/frontend/src/api/: NotesProvider.tsx  commands.ts  hooks.ts
crates/frontend/src/components/: Navigation.tsx
crates/frontend/src/components/editor/: CmEditor.css  CmEditor.tsx  CmLoader.tsx  EditorManager.tsx  README.md
crates/frontend/src/components/editor/cm/: index.ts  livePreview.test.ts  livePreview.ts  livePreview2.ts  livePreview3.ts  parser.test.ts  parser.ts  renderer.ts  search.ts  widgets.ts
crates/frontend/src/components/legacy/: MdEditor.css  MdEditor.tsx  PlainEditor.tsx
crates/frontend/src/components/ui/: ConfirmModal.tsx  DropdownMenu.tsx  NoteFinder.tsx  Settings.tsx
crates/frontend/src/utils/: appState.ts
