[package]
name = "zinnia_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"] }
notify = "6.1.1"
dirs = "5.0"
trash = "5.2"
regex = "1.11"

[dev-dependencies]
tempfile = "3.23.0"
